--- a/sc-config-server/src/main/resources/application.properties
+++ b/sc-config-server/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=sc-config-server
+
 #git\u914D\u7F6E\u4E2D\u5FC3
+#\u5206\u652F
 spring.cloud.config.label=master
+#git\u5730\u5740
 spring.cloud.config.server.git.uri=https://gitee.com/xiaowugui521/whyuan-sc
+#\u641C\u7D22\u76EE\u5F55
 spring.cloud.config.server.git.search-paths=sc-config-server
 
+#\u6CE8\u518C\u4E2D\u5FC3
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
